--- a/app/templates/erc360/edit.html
+++ b/app/templates/erc360/edit.html
@@ -2,7 +2,7 @@
 <div class="modal-background to-profile"></div>
 <div class="modal-card noselect">
   <header class="modal-card-head">
-      <a class="close button is-info is-inverted" aria-label="close">
+      <a class="close button is-info is-inverted to-profile" aria-label="close">
         <span class="icon">
           <i class="fa fa-times"></i>
         </span>
