--- a/app/templates/erc360/ownership/mint.html
+++ b/app/templates/erc360/ownership/mint.html
@@ -1,8 +1,8 @@
 <div class="modal is-active" id="#mint-modal">
-<div class="modal-background"></div>
+<div class="modal-background to-ownership"></div>
 <div class="modal-card noselect">
   <header class="modal-card-head">
-      <a class="close button is-info is-inverted" aria-label="close">
+      <a class="close button is-info is-inverted to-ownership" aria-label="close">
         <span class="icon">
           <i class="fa fa-times"></i>
         </span>
