--- a/app/templates/erc360/ownership.html
+++ b/app/templates/erc360/ownership.html
@@ -1,9 +1,9 @@
-<div class="modal is-active" id="#ownsership-modal">
+<div class="modal is-active" id="ownership-modal">
 <div class="modal-background to-profile"></div>
 <div class="modal-card noselect">
   <header class="modal-card-head">
-      <a class="close button is-info is-inverted" aria-label="close">
-        <span class="icon">
+      <a class="close button is-info is-inverted to-profile" aria-label="close">
+        <span class="icon to-profile">
           <i class="fa fa-times"></i>
         </span>
       </a>
