--- a/app/templates/erc360/structure/deposit.html
+++ b/app/templates/erc360/structure/deposit.html
@@ -2,7 +2,7 @@
 <div class="modal-background to-structure"></div>
 <div class="modal-card noselect">
   <header class="modal-card-head">
-      <a class="close button is-info is-inverted" aria-label="close">
+      <a class="close button is-info is-inverted to-structure" aria-label="close">
         <span class="icon">
           <i class="fa fa-times"></i>
         </span>
