--- a/app/templates/erc360/structure/transfer.html
+++ b/app/templates/erc360/structure/transfer.html
@@ -3,8 +3,8 @@
 <div class="modal-background to-structure"></div>
 <div class="modal-card noselect">
   <header class="modal-card-head">
-      <a class="close button is-info is-inverted" aria-label="close">
-        <span class="icon">
+      <a class="close button is-info is-inverted to-structure" aria-label="close">
+        <span class="icon to-structure">
           <i class="fa fa-times"></i>
         </span>
       </a>
