--- a/app/templates/erc360/structure/transfer.html
+++ b/app/templates/erc360/structure/transfer.html
@@ -39,7 +39,7 @@
       </span>
       </p>
       <p class="control">
-        <input id="transfer-amount-input" class="input" type="text" placeholder="Amount to transfer" min="0" max="{{selected_token_amount.amount_in_decimals}}" maxlength="78" data-decimals="{{selected_token_amount.decimals}}">
+        <input id="transfer-amount-input" class="input" type="text" placeholder="Amount to transfer" min="{{selected_token_amount.min_amount_in_decimals}}" max="{{selected_token_amount.amount_in_decimals}}" maxlength="78" data-decimals="{{selected_token_amount.decimals}}">
       </p>
     </div>
     <div class="field">
