transferFundsFromBank interaction in progress...

--- a/app/templates/erc360/ownership/mint.html
+++ b/app/templates/erc360/ownership/mint.html
@@ -24,7 +24,7 @@
     </div>
     <div class="field">
       <p class="control">
-        <progress class="progress is-two-faced" id="mint-amount-progress-bar" class="progress" value="{{erc360.log_total_supply}}" max="{{erc360.log_max_supply}}">Ay</progress>
+        <progress class="progress is-two-faced" id="mint-amount-progress-bar" class="progress" value="{{erc360.log_total_supply}}" max="{{erc360.log_max_supply}}"></progress>
       </p>
       <p class="control">
         <span id="mint-amount-span" class="text" style="float:left;" data-original-amount='{{erc360.total_supply or 0}}'>{{erc360.pretty_exponential_total_supply}}</span>
