--- a/app/templates/erc360/structure/transfer.html
+++ b/app/templates/erc360/structure/transfer.html
@@ -16,9 +16,9 @@
       <div class="field has-addons has-addons-centered">
        <p class="control">
           <span class="select">
-          <select>
+          <select id="transfer-bank-select">
             {% for bank in erc360.banks %}
-            <option {% if bank==selected_bank %}selected{% endif %}>{{bank.representation}}</option>
+            <option value="{{bank.permit.bytes.hex()}}" {% if bank==selected_bank %}selected{% endif %}>{{bank.representation}}</option>
             {% endfor %}
           </select>
       </span>
@@ -31,9 +31,9 @@
       <div class="field has-addons has-addons-centered">
        <p class="control">
           <span class="select">
-          <select>
+          <select id="transfer-token-select">
           {% for token_amount in selected_bank.token_amounts %}
-            <option {% if token_amount==selected_token_amount %}selected{% endif %}>{{token_amount.token.symbol}}</option>
+            <option value="{{token_amount.token.address}}" {% if token_amount==selected_token_amount %}selected{% endif %}>{{token_amount.token.symbol}}</option>
           {% endfor %}
           </select>
       </span>
