--- a/app/templates/erc360/timeline.html
+++ b/app/templates/erc360/timeline.html
@@ -18,7 +18,7 @@
   </header>
   <section id="timeline-content" class="modal-card-body has-text-centered">
   <table class="table is-striped is-bordered is-fullwidth">
-  {% for e in erc360.actions[::-1] %}
+  {% for e in erc360.events[::-1] %}
   <tr><td>
   {% set payload = e.payload %}
     {% if payload["func"] == "sP" %}
